Implement branch target protection using the branch target identification feature introduced in Armv8.5.  This provides "head-CFI" to complement the "tail-CFI" provided by retguard.  Unfortunately most arm64 machines don't support this feature yet.  But Apple M2 does support it and it seems to work there.
ok deraadt@

--- a/sys/arch/arm64/conf/Makefile.arm64
+++ b/sys/arch/arm64/conf/Makefile.arm64
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.arm64,v 1.44 2023/01/01 01:34:33 jsg Exp $
+#	$OpenBSD: Makefile.arm64,v 1.45 2023/03/27 19:02:47 kettenis Exp $
 
 # For instructions on building kernels consult the config(8) and options(4)
 # manual pages.
@@ -61,7 +61,7 @@ CWARNFLAGS+=	-Wno-deprecated-non-prototype -Wno-unknown-warning-option
 
 CMACHFLAGS=	-march=armv8-a+nofp+nosimd \
 		-fno-omit-frame-pointer -mno-omit-leaf-frame-pointer \
-		-ffixed-x18
+		-ffixed-x18 -mbranch-protection=bti
 CMACHFLAGS+=	-ffreestanding ${NOPIE_FLAGS}
 SORTR=		sort -R
 .if ${IDENT:M-DNO_PROPOLICE}
