--- a/share/man/man4/Makefile
+++ b/share/man/man4/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.834 2023/03/19 11:22:50 kettenis Exp $
+#	$OpenBSD: Makefile,v 1.835 2023/03/31 08:20:58 kevlo Exp $
 
 MAN=	aac.4 abcrtc.4 abl.4 ac97.4 acphy.4 acrtc.4 \
 	acpi.4 acpiac.4 acpials.4 acpiasus.4 acpibat.4 \
@@ -60,7 +60,7 @@ MAN=	aac.4 abcrtc.4 abl.4 ac97.4 acphy.4 acrtc.4 \
 	multicast.4 mvclock.4 mvdog.4 mvgicp.4 mvgpio.4 mvicu.4 mviic.4 \
 	mvkpcie.4 mvneta.4 mvpinctrl.4 mvpp.4 mvrng.4 mvrtc.4 mvspi.4 \
 	mvtemp.4 mvsw.4 mvuart.4 myx.4 \
-	ne.4 neo.4 nep.4 netintro.4 nfe.4 nge.4 nmea.4 \
+	ne.4 neo.4 nep.4 netintro.4 nfe.4 ngbe.4 nge.4 nmea.4 \
 	nsclpcsio.4 nsgphy.4 nsphy.4 nsphyter.4 null.4 nviic.4 nvme.4 nvt.4 \
 	oce.4 ociic.4 ohci.4 onewire.4 oosiop.4 openprom.4 options.4 \
 	osiop.4 otus.4 owid.4 owctr.4 owsbm.4 owtemp.4 \
