--- a/sys/arch/arm64/conf/Makefile.arm64
+++ b/sys/arch/arm64/conf/Makefile.arm64
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.arm64,v 1.45 2023/03/27 19:02:47 kettenis Exp $
+#	$OpenBSD: Makefile.arm64,v 1.46 2023/04/09 19:48:37 kettenis Exp $
 
 # For instructions on building kernels consult the config(8) and options(4)
 # manual pages.
@@ -61,7 +61,7 @@ CWARNFLAGS+=	-Wno-deprecated-non-prototype -Wno-unknown-warning-option
 
 CMACHFLAGS=	-march=armv8-a+nofp+nosimd \
 		-fno-omit-frame-pointer -mno-omit-leaf-frame-pointer \
-		-ffixed-x18 -mbranch-protection=bti
+		-ffixed-x18
 CMACHFLAGS+=	-ffreestanding ${NOPIE_FLAGS}
 SORTR=		sort -R
 .if ${IDENT:M-DNO_PROPOLICE}
@@ -70,6 +70,9 @@ CMACHFLAGS+=	-fno-stack-protector
 .if ${IDENT:M-DSMALL_KERNEL}
 SORTR=		cat
 COPTIMIZE?=	-Oz
+CMACHFLAGS+=	-mbranch-protection=none
+.else
+CMACHFLAGS+=	-mbranch-protection=bti
 .endif
 
 DEBUG?=		-g
