--- a/sys/arch/amd64/conf/Makefile.amd64
+++ b/sys/arch/amd64/conf/Makefile.amd64
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.amd64,v 1.130 2023/04/16 23:57:59 deraadt Exp $
+#	$OpenBSD: Makefile.amd64,v 1.131 2023/04/17 01:14:24 deraadt Exp $
 
 # For instructions on building kernels consult the config(8) and options(4)
 # manual pages.
@@ -69,7 +69,7 @@ CMACHFLAGS+=	-msave-args
 SORTR=		cat
 COPTIMIZE=	-Oz
 .if ${COMPILER_VERSION:Mclang}
-CMACHFLAGS+=	-mno-retpoline -fcf-protection=branch
+CMACHFLAGS+=	-mno-retpoline -fcf-protection=none
 .endif
 .else
 CMACHFLAGS+=	-fcf-protection=branch
