--- a/distrib/i386/ramdisk_cd/Makefile
+++ b/distrib/i386/ramdisk_cd/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.28 2023/04/26 13:01:02 krw Exp $
+#	$OpenBSD: Makefile,v 1.29 2023/04/26 14:42:27 krw Exp $
 
 FS=		miniroot${OSrev}.img
 FSSIZE=		8448
@@ -18,7 +18,7 @@ ${FS}: bsd.gz
 	vnconfig -v ${FS} > vnd
 	fdisk -yi -l ${FSSIZE} -f ${DESTDIR}/usr/mdec/mbr `cat vnd`
 	disklabel -w `cat vnd` ${FSDISKTYPE}
-	newfs -O 1 -m 0 -o space -i 524288 -c ${FSSIZE} /dev/r`cat vnd`a
+	newfs -O 1 -m 0 -o space -i 524288 -c ${FSSIZE} -b 8192 -f 1024 /dev/r`cat vnd`a
 	mount /dev/`cat vnd`a ${MOUNT_POINT}
 	objcopy -S -R .comment ${DESTDIR}/usr/mdec/boot ${.OBJDIR}/boot
 	installboot -v -r ${MOUNT_POINT} `cat vnd` \
