--- a/distrib/amd64/ramdisk_cd/Makefile
+++ b/distrib/amd64/ramdisk_cd/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.37 2023/04/24 17:07:34 krw Exp $
+#	$OpenBSD: Makefile,v 1.38 2023/04/28 08:45:25 krw Exp $
 
 FS=		miniroot${OSrev}.img
 FSSIZE=		11392
@@ -62,7 +62,7 @@ bsd.gz: bsd.rd
 	    bsd.rd bsd.strip
 	gzip -9cn bsd.strip > bsd.gz
 
-bsd.rd: mr.fs bsd
+bsd.rd: mr.fs
 	cp bsd bsd.rd
 	rdsetroot bsd.rd mr.fs
 
@@ -71,7 +71,7 @@ bsd:
 	    su ${BUILDUSER} -c '${MAKE} config && ${MAKE} clean && exec ${MAKE} ${MFLAGS}'
 	cp -p ${.CURDIR}/../../../sys/arch/${MACHINE}/compile/${RAMDISK}/obj/bsd bsd
 
-mr.fs: instbin
+mr.fs: instbin bsd
 	rm -rf $@.d
 	install -d -o root -g wheel $@.d
 	mtree -def ${MTREE} -p $@.d -u
