--- a/lib/libcrypto/Makefile
+++ b/lib/libcrypto/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.152 2023/07/28 11:08:01 jsing Exp $
+# $OpenBSD: Makefile,v 1.153 2023/07/29 06:46:20 tb Exp $
 
 LIB=	crypto
 LIBREBUILD=y
@@ -22,11 +22,7 @@ CFLAGS+= -DLIBRESSL_INTERNAL
 .ifdef NAMESPACE
 CFLAGS+= -DLIBRESSL_NAMESPACE -DLIBRESSL_CRYPTO_NAMESPACE
 .endif
-
-
-.if !defined(NOPIC)
 CFLAGS+= -DHAVE_FUNOPEN
-.endif
 
 CFLAGS+= -I${LCRYPTO_SRC}
 CFLAGS+= -I${LCRYPTO_SRC}/arch/${MACHINE_CPU}
