--- a/lib/libcrypto/man/Makefile
+++ b/lib/libcrypto/man/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.261 2023/08/15 11:26:49 schwarze Exp $
+# $OpenBSD: Makefile,v 1.262 2023/08/25 05:29:35 tb Exp $
 
 .include <bsd.own.mk>
 
@@ -198,6 +198,7 @@ MAN=	\
 	EVP_SealInit.3 \
 	EVP_SignInit.3 \
 	EVP_VerifyInit.3 \
+	EVP_add_cipher.3 \
 	EVP_aes_128_cbc.3 \
 	EVP_camellia_128_cbc.3 \
 	EVP_chacha20.3 \
