Document EVP_{CIPHER,MD}_do_all{,_sorted}(3)
The function prototypes in the SYNOPSIS don't look great, but schwarze
assures me that this is how it is supposed to be. It is rather strange
that OpenSSL chose to sprinkle OPENSSL_init_crypto() calls into these
four functions rather than two inside OBJ_NAME_do_all{,_sorted}(3).
Surely there was a good reason for that.

With input and fixes from schwarze

--- a/lib/libcrypto/man/Makefile
+++ b/lib/libcrypto/man/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.264 2023/08/27 15:33:08 schwarze Exp $
+# $OpenBSD: Makefile,v 1.265 2023/08/30 00:58:57 tb Exp $
 
 .include <bsd.own.mk>
 
@@ -165,6 +165,7 @@ MAN=	\
 	EVP_AEAD_CTX_init.3 \
 	EVP_BytesToKey.3 \
 	EVP_CIPHER_CTX_get_cipher_data.3 \
+	EVP_CIPHER_do_all.3 \
 	EVP_CIPHER_meth_new.3 \
 	EVP_DigestInit.3 \
 	EVP_DigestSignInit.3 \
