Remove -mabi=elfv2 option.  This is the default for OpenBSD and clang 16 generates a (spurious) error about it in certain contexts.  This is fixed in later versions (see https://reviews.llvm.org/D156351) but it is easier to just drop the option.
ok miod@, jsg@

--- a/sys/arch/powerpc64/conf/Makefile.powerpc64
+++ b/sys/arch/powerpc64/conf/Makefile.powerpc64
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.powerpc64,v 1.16 2023/09/06 01:47:37 jsg Exp $
+#	$OpenBSD: Makefile.powerpc64,v 1.17 2023/09/06 09:12:49 kettenis Exp $
 
 # For instructions on building kernels consult the config(8) and options(4)
 # manual pages.
@@ -56,7 +56,7 @@ CWARNFLAGS=	-Werror -Wall -Wimplicit-function-declaration \
 		-Wno-unused-but-set-variable -Wno-gnu-folding-constant \
 		-Wframe-larger-than=2047
 
-CMACHFLAGS=	-mabi=elfv2 -msoft-float -mno-altivec -mno-vsx
+CMACHFLAGS=	-msoft-float -mno-altivec -mno-vsx
 CMACHFLAGS+=	-ffreestanding
 SORTR=		sort -R
 .if ${IDENT:M-DNO_PROPOLICE}
