Add missing removal of network interfaces in regress cleanup targets. Reducing the risk tests conflicting with each other.
ok bluhm@

--- a/regress/sys/net/gif/Makefile
+++ b/regress/sys/net/gif/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.8 2023/10/11 18:07:56 anton Exp $
+#	$OpenBSD: Makefile,v 1.9 2023/10/19 18:36:40 anton Exp $
 
 # Copyright (c) 2018-2020 Alexander Bluhm <bluhm@openbsd.org>
 #
@@ -140,7 +140,6 @@ ifconfig: unconfig
 
 REGRESS_CLEANUP +=	unconfig
 unconfig:
-	# Destroy interfaces, keep lo as routing domain cannot be destroyed.
 .for n in ${NUMS}
 	-${SUDO} /sbin/ifconfig lo$n rdomain $n
 	-${SUDO} /sbin/ifconfig lo$n inet 127.0.0.1 delete
@@ -149,6 +148,7 @@ unconfig:
 	-${SUDO} /sbin/ifconfig lo$n inet6 ${SRC_TUNNEL6_$n} delete
 	-${SUDO} /sbin/ifconfig gif$n4 destroy
 	-${SUDO} /sbin/ifconfig gif$n6 destroy
+	-${SUDO} /sbin/ifconfig lo$n destroy
 .endfor
 	rm -f stamp-ifconfig
 
